tools/tree-sitter-leia/corpus/concurrency.txt
==================
Goroutines channels and select
==================

func worker(out) {
  out <- 42
}

out := make(chan, 1)
go worker(out)

select {}

---

(source_file
  (statement
    (function_declaration
      name: (identifier)
      parameters: (parameter_list
        (parameter
          (identifier)))
      body: (block
        (statement
          (simple_statement
            (send_statement
              channel: (expression
                (identifier))
              value: (expression
                (number))))))))
  (statement
    (simple_statement
      (assignment_statement
        left: (expression_list
          (expression
            (identifier)))
        right: (expression_list
          (expression
            (call_expression
              function: (expression
                (identifier))
              arguments: (argument_list
                (expression
                  (identifier))
                (expression
                  (number)))))))))
  (statement
    (go_statement
      call: (expression
        (call_expression
          function: (expression
            (identifier))
          arguments: (argument_list
            (expression
              (identifier)))))))
  (statement
    (select_statement)))
